Bug 457854 - 'Share' tab should be focused when we open the properties of a shared folder via Network > Samba Status
Summary: 'Share' tab should be focused when we open the properties of a shared folder ...
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Samba (other bugs)
Version First Reported In: 5.25.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-08-13 20:02 UTC by Patrick Silva
Modified: 2022-08-31 14:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-08-13 20:02:39 UTC
STEPS TO REPRODUCE
1. create a samba share
2. open kinfocenter
3. go to Network > Samba Status
4. hover over the rightmost button in the row of the created samba share - a tooltip says 'Open folder properties to change share settings'
5. click on the hovered button

OBSERVED RESULT
properties window opens with 'General' tab focused

EXPECTED RESULT
the button is used to change share settings, so 'Share' tab should be focused on opening

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: X11
Comment 1 Bug Janitor Service 2022-08-31 09:33:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kinfocenter/-/merge_requests/109
Comment 2 Harald Sitter 2022-08-31 14:19:43 UTC
Git commit d7314ea0c4451b6eacc3f11c340fed2bc9186768 by Harald Sitter.
Committed on 31/08/2022 at 14:18.
Pushed by sitter into branch 'master'.

smb: show the share page in properties dialog

M  +2    -1    Modules/samba/ksambasharemodel.cpp

https://invent.kde.org/plasma/kinfocenter/commit/d7314ea0c4451b6eacc3f11c340fed2bc9186768
Comment 3 Harald Sitter 2022-08-31 14:20:15 UTC
Git commit 701ea7d684255c732139d3b4a0545817924769f4 by Harald Sitter.
Committed on 31/08/2022 at 14:20.
Pushed by sitter into branch 'Plasma/5.25'.

smb: show the share page in properties dialog


(cherry picked from commit d7314ea0c4451b6eacc3f11c340fed2bc9186768)

M  +2    -1    Modules/samba/ksambasharemodel.cpp

https://invent.kde.org/plasma/kinfocenter/commit/701ea7d684255c732139d3b4a0545817924769f4