smb: show the share page in properties dialog

BUG: 457854


(cherry picked from commit d7314ea0c4451b6eacc3f11c340fed2bc9186768)